force-app/main/default/objects/Credit_Report__c/Credit_Report__c.object-meta.xml
<CustomObject>
    <label>Credit Report</label>
    <nameField>
        <label>Credit Report Provider</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>