force-app/main/default/objects/Credit_Report__c/fields/Cash_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cash_Variance__c</fullName>
    <label>Cash YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>