force-app/main/default/objects/Credit_Report__c/fields/Commercial_Credit_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Credit_Percentile__c</fullName>
    <label>Commercial Credit Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>