force-app/main/default/objects/Credit_Report__c/fields/Common_Value__c.field-meta.xml
<CustomField>
    <fullName>Common_Value__c</fullName>
    <label>Common Value</label>
    <length>1</length>
    <type>Text</type>
</CustomField>