force-app/main/default/objects/Credit_Report__c/fields/Cost_of_Sales_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales_Variance__c</fullName>
    <label>Cost of Sales YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>