force-app/main/default/objects/Credit_Report__c/fields/Credit_Pre_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pre_Approval_Status__c</fullName>
    <formula>IF(D_B_Data_Available__c = False, IF((Common_Value__c == &apos;A&apos; || Common_Value__c = &apos;B&apos;) &amp;&amp; Requested_Credit_Amount__c &lt;= Credit_Limit__c &amp;&amp; Status__c = &apos;Active&apos;,&apos;Approved&apos;,IF(((Common_Value__c == &apos;C&apos; &amp;&amp; Requested_Credit_Amount__c &lt;= Credit_Limit__c) || (Common_Value__c == &apos;A&apos; || Common_Value__c = &apos;B&apos;)) &amp;&amp; Status__c = &apos;Active&apos;,&apos;Pending&apos;,&apos;Declined&apos;)),


IF(Credit_Scorecard__c &gt;= 7.0 &amp;&amp; Requested_Credit_Amount__c &lt;= Credit_Limit__c &amp;&amp; Trade_Experiences_Count__c &gt;= 5, &apos;Approved&apos;,IF(Credit_Scorecard__c &gt;= 4.01, &apos;Pending&apos;,&apos;Declined&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Pre-Approval Status</label>
    <type>Text</type>
</CustomField>