force-app/main/default/objects/Credit_Report__c/fields/Credit_Report_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Timestamp__c</fullName>
    <label>Credit Report Timestamp</label>
    <type>DateTime</type>
</CustomField>