force-app/main/default/objects/Credit_Report__c/fields/Creditsafe_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creditsafe Data Available</label>
    <type>Checkbox</type>
</CustomField>