force-app/main/default/objects/Credit_Report__c/fields/Creditsafe_ID__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_ID__c</fullName>
    <label>Creditsafe ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>