force-app/main/default/objects/Credit_Report__c/fields/Current_Ratio_Variance__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_Variance__c</fullName>
    <label>Current Ratio YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>