force-app/main/default/objects/Credit_Report__c/fields/D_B_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>D_B_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B Data Available</label>
    <type>Checkbox</type>
</CustomField>