force-app/main/default/objects/Credit_Report__c/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <label>Establishment Date</label>
    <type>DateTime</type>
</CustomField>