force-app/main/default/objects/Credit_Report__c/fields/Financial_Stress_Score_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Score_Percentile__c</fullName>
    <label>Financial Stress Score Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>