force-app/main/default/objects/Credit_Report__c/fields/Gearing__c.field-meta.xml
<CustomField>
    <fullName>Gearing__c</fullName>
    <label>Gearing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>