force-app/main/default/objects/Credit_Report__c/fields/Gearing_Variance__c.field-meta.xml
<CustomField>
    <fullName>Gearing_Variance__c</fullName>
    <label>Gearing YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>