force-app/main/default/objects/Credit_Report__c/fields/Operating_Profit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Profit__c</fullName>
    <label>Operating Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>