force-app/main/default/objects/Credit_Report__c/fields/PAYDEX__c.field-meta.xml
<CustomField>
    <fullName>PAYDEX__c</fullName>
    <label>PAYDEX</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>