force-app/main/default/objects/Credit_Report__c/fields/Profit_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profit_After_Tax__c</fullName>
    <label>Profit After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>