force-app/main/default/objects/Credit_Report__c/fields/Profit_After_Tax_Variance__c.field-meta.xml
<CustomField>
    <fullName>Profit_After_Tax_Variance__c</fullName>
    <label>Profit After Tax YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>