force-app/main/default/objects/Credit_Report__c/fields/Report_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Match_Name__c</fullName>
    <label>Report Match Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>