force-app/main/default/objects/Credit_Report__c/fields/Retained_Profit__c.field-meta.xml
<CustomField>
    <fullName>Retained_Profit__c</fullName>
    <label>Retained Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>