force-app/main/default/objects/Credit_Report__c/fields/Retained_Profit_Variance__c.field-meta.xml
<CustomField>
    <fullName>Retained_Profit_Variance__c</fullName>
    <label>Retained Profit YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>