force-app/main/default/objects/Credit_Report__c/fields/Revenue_Variance__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Variance__c</fullName>
    <label>Revenue YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>