force-app/main/default/objects/Credit_Report__c/fields/Total_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Assets__c</fullName>
    <label>Total Current Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>