force-app/main/default/objects/Credit_Report__c/fields/Total_Current_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Liabilities__c</fullName>
    <label>Total Current Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>