force-app/main/default/objects/Credit_Report__c/fields/Total_Current_Liabilities_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Liabilities_Variance__c</fullName>
    <label>Total Current Liabilities YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>