force-app/main/default/objects/Credit_Report__c/fields/Total_Debt_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_Ratio__c</fullName>
    <label>Total Debt Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>