force-app/main/default/objects/Credit_Report__c/fields/Trade_Experiences_Count__c.field-meta.xml
<CustomField>
    <fullName>Trade_Experiences_Count__c</fullName>
    <label>Trade Experiences Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>