force-app/main/default/objects/Credit_Report__c/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <label>Working Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>