force-app/main/default/objects/Credit_Report__c/fields/Working_Capital_Variance__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital_Variance__c</fullName>
    <label>Working Capital YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>