force-app/main/default/objects/Credit_Report__c/recordTypes/Creditsafe.recordType-meta.xml
<RecordType>
    <fullName>Creditsafe</fullName>
    <active>true</active>
    <label>Creditsafe</label>
</RecordType>