force-app/main/default/objects/Credit_Report__c/recordTypes/Dun_Bradstreet.recordType-meta.xml
<RecordType>
    <fullName>Dun_Bradstreet</fullName>
    <active>true</active>
    <label>Dun &amp; Bradstreet</label>
</RecordType>